// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embeddingsReducer Loading on error condition resets error 1`] = `
{
  "fghfgdh": {
    "data": [],
    "error": false,
    "loading": true,
  },
}
`;

exports[`embeddingsReducer Sets error conditions 1`] = `
{
  "fghfgdh": {
    "data": [],
    "error": "wow, something really bad happened",
    "loading": false,
  },
}
`;

exports[`embeddingsReducer Sets up store for embedding when loading starts 1`] = `
{
  "fghfgdh": {
    "data": [],
    "error": false,
    "loading": true,
  },
  "loading": false,
}
`;

exports[`embeddingsReducer Sets up store properly for loaded cell sets. 1`] = `
{
  "fghfgdh": {
    "data": [
      [
        1,
        2,
      ],
      [
        3,
        4,
      ],
      [
        5,
        6,
      ],
    ],
    "error": false,
    "loading": false,
  },
}
`;
